# hello-edge-tts

./: .gitignore  Makefile  README.md  README_MULTILINGUAL.md  build.bat  build.sh  deploy.sh  final_audio_test.bat  run.bat  run.sh  run_multilingual_demo.bat  run_multilingual_demo.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-update.yml
hello-edge-tts-dart/: README.md  pubspec.yaml
hello-edge-tts-dart/lib/: audio_player.dart  hello_tts.dart  ssml_utils.dart  tts_client.dart
hello-edge-tts-dart/test/: tts_test.dart
hello-edge-tts-java/: README.md  dependency-reduced-pom.xml  pom.xml
hello-edge-tts-java/src/main/java/com/example/hellotts/: AudioException.java  AudioPlayer.java  ConfigManager.java  HelloTTS.java  MultilingualDemo.java  NetworkException.java  SSMLUtils.java  TTSClient.java  TTSConfig.java  TTSError.java  TTSException.java  Voice.java
hello-edge-tts-java/src/test/java/com/example/hellotts/: TTSClientTest.java  VoiceTest.java
hello-edge-tts-python/: README.md  __init__.py  audio_player.py  build.sh  config_manager.py  hello_tts.py  multilingual_demo.py  requirements.txt  ssml_utils.py  tts_client.py  utils.py  voice.py
hello-edge-tts-rust/: Cargo.toml  README.md  build.sh
hello-edge-tts-rust/examples/: hello_tts.rs  multilingual_demo.rs
hello-edge-tts-rust/src/: audio_player.rs  config_manager.rs  lib.rs  main.rs  ssml_utils.rs  tts_client.rs
scripts/: get-config.ps1  update-dependencies.sh
shared/: language_test_config.json  language_test_config_clean.json  multilingual_demo_config.json  voice_configs.json
